# PhylodynamicsProject

./: .gitignore  FIX_PYTHON_VERSION.md  MODEL_EXPLANATION.md  MOTIVATION.md  README.md  config.py  density_regression_analysis.ipynb  pyproject.toml  requirements-bayesian.txt  requirements.txt  setup_env.sh
data/phylodynamicsDL/output_trees/: tree_0.nwk  tree_1.nwk  tree_10.nwk  tree_100.nwk  tree_1000.nwk  tree_1001.nwk  tree_1002.nwk  tree_1003.nwk  tree_1004.nwk  tree_1005.nwk  tree_1006.nwk  tree_1007.nwk  tree_1008.nwk  tree_1009.nwk  tree_101.nwk  tree_1010.nwk  tree_1011.nwk  tree_1012.nwk  tree_1013.nwk  tree_1014.nwk  tree_1015.nwk  tree_1016.nwk  tree_1017.nwk  tree_1018.nwk  tree_1019.nwk  tree_102.nwk  tree_1020.nwk  tree_1021.nwk  tree_1022.nwk  tree_1023.nwk  tree_1024.nwk  tree_1025.nwk  tree_1026.nwk  tree_1027.nwk  tree_1028.nwk  tree_1029.nwk  tree_103.nwk  tree_1030.nwk  tree_1031.nwk  tree_1032.nwk  (+8616 more)
presentation/: COMBINED_TALKING_POINTS.md  presentation.tex
report/: refs.bib  report.tex
src/analysis/: DAEMON_README.md  compare_results.py  daemon_runner.py  run_all_analyses.py
src/analysis/bayesian/: __init__.py  bayesian_analysis.py  bayesian_birth_death.py
src/analysis/mle/: __init__.py  mle_analysis.py  mle_birth_death.py
src/analysis/phylodeep_method/: __init__.py  phylodeep_analysis.py
src/analysis/utils/: __init__.py  batch_processor.py  common.py
src/simulation/: generate_trees.py
src/simulation/original/: README.md  generate_trees.py
