[project]
name = "phylodynamicsdl"
version = "0.1.0"
description = "Statistical efficiency comparison of PhyloDeep vs MLE for birth-death phylogenetic models"
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "biopython>=1.86",
    "ete3>=3.1.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "phylodeep>=0.9",
    "psutil>=5.9.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "tqdm>=4.67.1",
    "treesimulator>=0.2.24",
]

[project.optional-dependencies]
bayesian = [
    "pymc>=5.0.0",
    "arviz>=0.15.0",
]
